Make !pluginsEnabled() work proeprly rather than do some weirdo attach/detach dance

BUG: 208780

svn path=/trunk/KDE/kdelibs/; revision=1193090